move modal button panel to app, fix text overflow for banners

--- a/client/src/app/components_css/clue.component.css
+++ b/client/src/app/components_css/clue.component.css
@@ -226,3 +226,9 @@ textarea:focus,
 input:focus {
   outline: none;
 }
+
+.banner-text,
+.answering-text {
+  height: 100%;
+  width: 100%;
+}
